--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -3,21 +3,18 @@
 {% load static %}
 
 {% block content-block %}
-
-    <a href="{% url 'index' %}">На главную</a>
-
-    <div class="container">
-        <div class="row">
-            <div class="nine columns">
-                {{ teacher.first_name }}
-                {{ teacher.last_name }}
-                {{ teacher.contact }}
-                {{ teacher.birthday }}
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <h2>{{ teacher.first_name }} {{ teacher.last_name }}</h2>
         </div>
     </div>
-    <div class="container">
-        {{ calendar }}
+
+    <div class="row">
+        <div class="col-md-8">
+            {{ calendar }}
+        </div>
     </div>
+</div>
 
 {% endblock %}
